# play_motion-release2

./: CHANGELOG.rst  README.md  debian.store  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
play_motion/: package.xml
play_motion_msgs/: package.xml
rpm/: ros-indigo-play-motion-msgs.spec  ros-indigo-play-motion.spec  ros-kinetic-play-motion-msgs.spec  ros-kinetic-play-motion.spec
