<?xml version="1.0"?>
<package format="2">
  <name>play_motion</name>
  <version>0.4.1</version>
  <description>Plays a pre-recorded motion on a robot</description>

  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>play_motion_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>joint_state_controller</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>joint_trajectory_controller</test_depend>

</package>
