<?xml version="1.0"?>
<package format="2">
  <name>play_motion_msgs</name>
  <version>0.4.1</version>
  <description>Messages, services and actions used by play_motion.</description>

  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
